// Zombie Outbreak Simulator
// CS162 -Intro to Computer Science II
// Program Created by Blaize Guerra
// This program runs a probabilistic zombie outbreak simulation.
// Users can interact with this program by adjusting the probabilites for different outcomes of the simulation

import processing.core.PApplet;

public class Main {
    private final static String[] OPTIONS= new String[] {"--present","Sketch"};
    public static void main(String[] args) {
        PApplet.main(OPTIONS);
    }
}
